Source/WebCore/platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.h
@@ -126,6 +126,7 @@ public:
     virtual void onSizeChanged();
     virtual void onPlayNotified();
     virtual void onPauseNotified();
+    virtual void onWaitMetadataNotified(bool hasFinished, int timeWaited);
 #if USE(ACCELERATED_COMPOSITING)
     virtual void onBuffering(bool);
 #endif
@@ -161,6 +162,9 @@ private:
     void userDrivenSeekTimerFired(Timer<MediaPlayerPrivate>*);
     Timer<MediaPlayerPrivate> m_userDrivenSeekTimer;
     float m_lastSeekTime;
+    void waitMetadataTimerFired(Timer<MediaPlayerPrivate>*);
+    Timer<MediaPlayerPrivate> m_waitMetadataTimer;
+    int m_waitMetadataPopDialogCounter;
 };
 
 } // namespace WebCore
